test/files/neg/t650.check
t650.scala:3: error: class Stack takes type parameters
trait Test2 extends Stack
                    ^
one error found
